# era

./: .coveragerc  .dockerignore  .editorconfig  .gitignore  .mypy.ini  LICENSE  MANIFEST.in  README.md  codecov.yml  development.txt  pyproject.toml  requirements.txt  test.txt
.github/workflows/: python-package.yml
era/: __init__.py  __main__.py  version.py
tests/: test_basic.py  tests_basic.py
